Fix hero-heading spacing for mobile

--- a/app/assets/stylesheets/2016/views/home.sass
+++ b/app/assets/stylesheets/2016/views/home.sass
@@ -121,6 +121,16 @@
         &:first-child
           margin-bottom: 40px
 
+@media(max-width: 400px)
+  #new_site_controller.index-action
+    section.hero
+      h1.countdown
+        margin-bottom: 0
+      h2
+        font-size: 25px
+      h3
+        font-size: 16px
+
 @media(min-width: 520px)
   #new_site_controller.index-action
     main
